--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyCoinTong</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_edit_coin_list">Edit List</string>
+    <string name="title_activity_setting">Edit Coin List</string>
     <string name="title_activity_holding">Holdings</string>
 </resources>
