--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,11 @@
     <string name="revenue_usd">Revenue(USD)</string>
     <string name="msg_all_coin_already_added">All available coins are in the interesting coin list.</string>
     <string name="msg_insert_avg_price_and_quantity">Please insert your average price and quantity.</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_useful_sites">Useful Sites</string>
+    <string name="nav_kimpro">Korea Premium</string>
+    <string name="nav_coinmarketcap">CoinMarketCap</string>
+    <string name="nav_clien">Clien</string>
+    <string name="nav_coinpan">Coinpan</string>
 </resources>
